--- a/package.json
+++ b/package.json
@@ -17,7 +17,16 @@
   },
   "homepage": "https://github.com/nyu-csci-ua-0480-008-spring-2018/ssg413-final-project#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "hbs": "^4.0.1",
     "jquery": "^3.3.1",
+    "mongodb": "^3.0.5",
+    "mongoose": "^5.0.14",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.0",
     "react": "^16.3.1"
   }
 }
