--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/nyu-csci-ua-0480-008-spring-2018/ssg413-final-project#readme",
   "dependencies": {
+    "bad-words": "^1.6.1",
     "bcryptjs": "^2.4.3",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
@@ -27,6 +28,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.0",
-    "react": "^16.3.1"
+    "react": "^16.3.1",
+    "socket.io": "^2.1.0"
   }
 }
