--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "passport-local-mongoose": "^5.0.0",
     "react": "^16.3.1",
     "socket.io": "^2.1.0"
+  },
+  "devDependencies": {
+    "babel-preset-env": "^1.6.1"
   }
 }
